--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ body {
   background-size: cover;
   background-position: center;
 }
+
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   margin: 0;
